<resources>
    <string name="app_name">Memoraid</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="Continue">Continue</string>
    <string name="email">E-mail address</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="phonenumber">Phone number</string>
    <string name="birthdate">Birthdate</string>
    <string name="addpicture">Add picture</string>
    <string name="iamacaretaker">I am a caretaker</string>
    <string name="termsandconditions">I agree to the terms and conditions</string>
    <string name="finish">Finish</string>
    <string name="name">Name:</string>
    <string name="view_terms_conditions">View Terms and Conditions</string>
    <string name="terms_conditions_url">https://sites.google.com/view/memoraidapp/pagina-de-pornire</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="card_match_scoring">Scoring is based on time and moves: faster times and fewer moves earn higher scores.</string>
    <string name="card_match_description">Match pairs of cards by flipping them. Try to complete the game in the shortest time and with the fewest moves.</string>
    <string name="card_match_description_caretaker">The player has to match pairs of cards by flipping them. Faster times and fewer moves earn higher scores.</string>
    <string name="card_match_title">Welcome to Card Match!</string>
    <string name="apiKey">AIzaSyC5aJdQfZVWc1XMmKc1BffgSvFnc5WJ5dY</string>
    <string name="default_web_client_id">214547328037-1i6ej1v2tlikkpe64fr1j4bq88cac9nn.apps.googleusercontent.com</string>
    <string name="web_client_id">214547328037-mcao55h2dtfmkfatf2fe28j9hj8ie5me.apps.googleusercontent.com</string>

    <array name="appointment_types">
        <item>Consultation</item>
        <item>Examination</item>
        <item>Surgery</item>
        <item>Follow-up</item>
        <item>Other</item>
    </array>

    <array name="frequency_options">
        <item>Once</item>
        <item>Daily</item>
        <item>Every X days</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </array>
</resources>