<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#D3D3D3"
        android:fontFamily="@font/frederickathegreat"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/register_username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@id/register_email_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/edit_text_box"/>

    <EditText
        android:id="@+id/register_email_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username"
        app:layout_constraintBottom_toTopOf="@id/register_password"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        android:hint="@string/email_phone"
        android:background="@drawable/edit_text_box"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_phone_number"
        app:layout_constraintBottom_toTopOf="@id/register_confirm_password"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/edit_text_box"/>

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:layout_constraintBottom_toTopOf="@id/first_register_continue_button"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:background="@drawable/edit_text_box"/>

    <android.widget.Button
        android:id="@+id/first_register_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>