<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- New password input -->
        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_box"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintVertical_chainStyle="packed"/>

        <!-- Confirm password input -->
        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_box"
            app:layout_constraintTop_toBottomOf="@id/editTextNewPassword"
            app:layout_constraintBottom_toTopOf="@id/resetPasswordButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.7"
            android:layout_marginTop="10dp"/>

        <!-- Submit button -->
        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
