<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/link_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/view_terms_conditions"
        android:autoLink="web"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/checkbox_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsandconditions"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/link_terms_conditions"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.widget.Button
        android:id="@+id/register_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        app:layout_constraintTop_toBottomOf="@id/checkbox_terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:padding="13dp"
        android:background="@drawable/button_selector"
        android:textColor="@drawable/foreground_color"/>

    <FrameLayout
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:background="@android:color/black"
        android:alpha="0.5">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>