<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/default_profile_picture"
        app:layout_constraintBottom_toTopOf="@id/profile_picture_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/profile_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change picture"
        app:layout_constraintBottom_toTopOf="@id/change_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        android:layout_marginBottom="40dp"/>


    <EditText
        android:id="@+id/change_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_box"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/change_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/change_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@id/change_username"
        app:layout_constraintBottom_toTopOf="@id/change_first_name"
        android:text="@string/email_phone"
        android:textSize="16sp"
        android:background="@drawable/edit_text_box"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/change_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@id/change_email"
        app:layout_constraintBottom_toTopOf="@id/change_last_name"
        android:text="@string/firstname"
        android:textSize="16sp"
        android:background="@drawable/edit_text_box"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/change_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@id/change_first_name"
        app:layout_constraintBottom_toTopOf="@id/change_phone_number"
        android:text="@string/lastname"
        android:textSize="16sp"
        android:background="@drawable/edit_text_box"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/change_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@id/change_last_name"
        app:layout_constraintBottom_toTopOf="@id/change_birthdate"
        android:text="@string/phonenumber"
        android:textSize="16sp"
        android:background="@drawable/edit_text_box"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/change_birthdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toBottomOf="@id/change_phone_number"
        app:layout_constraintBottom_toTopOf="@id/buttons_layout"
        android:text="@string/birthdate"
        android:textSize="16sp"
        android:background="@drawable/edit_text_box"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_birthdate"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save changes" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change password" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>