<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ImageView to display the profile picture -->
    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/default_profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/add_picture_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- TextView or Button to allow the user to add/change the picture -->
    <android.widget.Button
        android:id="@+id/add_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Picture"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:layout_constraintBottom_toTopOf="@id/register_firstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/register_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        app:layout_constraintBottom_toTopOf="@id/register_lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/edit_text_box"/>

    <EditText
        android:id="@+id/register_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_firstname"
        app:layout_constraintBottom_toTopOf="@id/second_register_continue_button"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/lastname"
        android:background="@drawable/edit_text_box"/>

    <android.widget.Button
        android:id="@+id/second_register_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>